# pycredit

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  Untitled.ipynb  Untitled1.ipynb  conf.py  example.ipynb  make.bat
src/pycredit/: __init__.py  column_histogram.py  data_preprocessing.py  param_grid.py
tests/: column_histogram_data.py  test_column_histogram.py  test_data_preprocessing.py  test_label_mapper.py  test_param_grid.py  test_pycredit.py
